--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "rootDir": "./src" /* input dir */,
       "strict": true,
       "esModuleInterop": true,
+      "resolveJsonModule": true,
   
       /* ES7 decirators */
       "experimentalDecorators": true,
@@ -13,5 +14,9 @@
       /* skip checking for declaration files & disallow inconsistently-cased references to the same file */
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
-    }
+    },
+    "include": [//include files
+      "src/**/*",
+      "src/**/*.json",
+    ],
 }
