--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@discordx/utilities": "^1.4.5",
     "discord.js": "^13.2.0",
-    "discordx": "^6.2.0"
+    "discordx": "^6.2.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
